cadastro de clientes e endpoint de login
